--- a/koleksi.html
+++ b/koleksi.html
@@ -131,7 +131,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="logoo.png" width="40" height="40" class="d-inline-block align-top rounded-circle" alt="Logo Perpustakaan">NovelKu</a>
+            <img src="logoo.png" width="40" height="40" class="d-inline-block align-top rounded-circle"
+                alt="Logo Perpustakaan">NovelKu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -159,16 +160,17 @@
 <body>
     <div class="mytitle">
         <h1>Koleksi Buku</h1>
-        <!-- <a href="{{ url_for('tambah_buku') }}" class="btn">Tambah Buku</a> -->
+        <a href="{{ url_for('tambah_buku') }}" class="btn">Tambah Buku</a>
     </div>
 
     <div class="container mt-5">
         <div class="row">
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
                     <img src="https://images.tokopedia.net/img/cache/500-square/VqbcmM/2022/6/9/079b63ef-1aa7-4673-8c71-3623b3fb8370.jpg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                        class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
                         <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
                         <p class="card-text"><em>Laut Bercerita</em></p> <!-- Emphasized as italic -->
@@ -186,13 +188,13 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
-                    <img src="https://cdn.gramedia.com/uploads/items/img212.jpg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                    <img src="https://cdn.gramedia.com/uploads/items/img212.jpg" class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>Laskar Pelangi</em></p> <!-- Emphasized as italic -->
+                        <h5 class="card-title">Novel</h5>
+                        <p class="card-text"><em>Laskar Pelangi</em></p>
                         <p class="card-text">Nama Penulis: Andrea Hirata</p>
                     </div>
 
@@ -207,13 +209,13 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
-                    <img src="https://cdn.gramedia.com/uploads/items/bumi-manusia-edit.jpg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                    <img src="https://cdn.gramedia.com/uploads/items/bumi-manusia-edit.jpg" class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>Bumi Manusia</em></p> <!-- Emphasized as italic -->
+                        <h5 class="card-title">Fiksi Sejarah</h5>
+                        <p class="card-text"><em>Bumi Manusia</em></p>
                         <p class="card-text">Nama Penulis: Pramoedya Ananta Toer</p>
                     </div>
 
@@ -228,13 +230,14 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
                     <img src="https://cdn.gramedia.com/uploads/items/9786024246945_Laut-Bercerita.png"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                        class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>Laut Bercerita</em></p> <!-- Emphasized as italic -->
+                        <h5 class="card-title">Novel</h5>
+                        <p class="card-text"><em>Laut Bercerita</em></p>
                         <p class="card-text">Nama Penulis: leila S. Chudori</p>
                     </div>
 
@@ -249,13 +252,14 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
                     <img src="https://assets-a1.kompasiana.com/statics/crawl/5658f3d124a9d552748b4567.jpeg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                        class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>5cm</em></p> <!-- Emphasized as italic -->
+                        <h5 class="card-title">Novel</h5>
+                        <p class="card-text"><em>5cm</em></p>
                         <p class="card-text">Nama Penulis: Dony Dirgantoro</p>
                     </div>
 
@@ -270,14 +274,15 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
-                    <img src="https://assets-a1.kompasiana.com/statics/crawl/5658f3d124a9d552748b4567.jpeg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                    <img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1249749162i/6688121.jpg"
+                        class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>5cm</em></p> <!-- Emphasized as italic -->
-                        <p class="card-text">Nama Penulis: Dony Dirgantoro</p>
+                        <h5 class="card-title">Novel</h5>
+                        <p class="card-text"><em>Negeri 5 Menara</em></p>
+                        <p class="card-text">Nama Penulis: A. Fuadi</p>
                     </div>
 
                     <div class="card-footer text-right">
@@ -291,14 +296,15 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
-                    <img src="https://assets-a1.kompasiana.com/statics/crawl/5658f3d124a9d552748b4567.jpeg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                    <img src="https://cdn.gramedia.com/uploads/picture_meta/2023/12/10/guesit79ilow3qmbwbrqrq.jpeg"
+                        class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>5cm</em></p> <!-- Emphasized as italic -->
-                        <p class="card-text">Nama Penulis: Dony Dirgantoro</p>
+                        <h5 class="card-title">Fiksi Remaja</h5>
+                        <p class="card-text"><em>ILY</em></p>
+                        <p class="card-text">Nama Penulis: Tere Liye</p>
                     </div>
 
                     <div class="card-footer text-right">
@@ -312,13 +318,14 @@
                 </div>
             </div>
 
-            <div class="col-md-3 mb-4"> 
+            <div class="col-md-3 mb-4">
                 <div class="card h-100">
                     <img src="https://www.gramedia.com/blog/content/images/2021/12/Cantik-itu-Luka-Cover-Besar.jpg"
-                        class="card-img-top" style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
+                        class="card-img-top"
+                        style="width: 100%; height: 300px; object-fit: cover; border-radius: 10px;">
                     <div class="card-body">
-                        <h5 class="card-title">Novel</h5> <!-- Changed to h5 -->
-                        <p class="card-text"><em>Cantik itu Luka</em></p> <!-- Emphasized as italic -->
+                        <h5 class="card-title">Fiksi</h5>
+                        <p class="card-text"><em>Cantik itu Luka</em></p>
                         <p class="card-text">Nama Penulis: Eka KUrniawan</p>
                     </div>
 
@@ -345,7 +352,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <p>Nama saya Fitri Amalia Saqila mahasiswa Jurusan Teknologi Informasi di Politeknik Negeri Jember.</p>
+                    <p>Nama saya Fitri Amalia Saqila mahasiswa Jurusan Teknologi Informasi di Politeknik Negeri Jember.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <p>Hobi saya adalah</p>
@@ -368,5 +376,8 @@
         </div>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
 </html>
