--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <style>
         h1 {
             font-family: 'Gowun Dodum', sans-serif;
@@ -160,7 +162,10 @@
 <body>
     <div class="mytitle">
         <h1>Selamat Datang di Sistem Informasi Buku</h1>
-        <a href="koleksi.html" class="btn">Cari Buku</a>
+        <a href="koleksi.html" class="btn">
+            Cari Buku <i class="fas fa-search" style="margin-left: 5px;"></i>
+        </a>
+                
     </div><br>
     <h3 style="margin-left: 30px;">Buku Terbaru</h3>
     <div class="mycards">
