--- a/kontak.html
+++ b/kontak.html
@@ -149,7 +149,7 @@
                     <a class="nav-link active" href="kontak.html">Kontak</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-square btn-danger"> Masuk
+                    <button type="button" class="btn btn-square btn-secondary"> Masuk
                     </button>
                 </li>
             </ul>
@@ -190,7 +190,7 @@
                             <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
                             <div>
                                 <h4>Telepon</h4>
-                                <p class="mb-2">+62 838-7009-7769</p>
+                                <p class="mb-2">123456879</p>
                             </div>
                         </div>
                     </div>
