--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <a class="nav-link active" href="kontak.html">Kontak</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-square btn-danger"> Masuk
+                    <button type="button" class="btn btn-square btn-secondary"> Masuk
                     </button>
                 </li>
             </ul>
