--- a/koleksi.html
+++ b/koleksi.html
@@ -160,7 +160,7 @@
 <body>
     <div class="mytitle">
         <h1>Koleksi Buku</h1>
-        <a href="{{ url_for('tambah_buku') }}" class="btn">Tambah Buku</a>
+        <a href="tambah_buku.html" class="btn">Tambah Buku</a>
     </div>
 
     <div class="container mt-5">
