--- a/koleksi.html
+++ b/koleksi.html
@@ -148,10 +148,10 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="kontak.html">Kontak</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <button type="button" class="btn btn-square btn-secondary"> Masuk
                     </button>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
