--- a/test.html
+++ b/test.html
@@ -8,26 +8,37 @@
 
     <style>
         ul {
-            list-style-type: none; /* Menghilangkan bullet (poin) dari daftar */
+            list-style-type: none;
+            /* Menghilangkan bullet (poin) dari daftar */
             padding: 0;
         }
+
         li {
-            border-bottom: 1px dashed #000; /* Garis bawah dengan efek putus-putus (dashed) */
-            padding-bottom: 3px; 
-            margin-bottom: 5px; 
+            border-bottom: 1px dashed #000;
+            /* Garis bawah dengan efek putus-putus (dashed) */
+            padding-bottom: 3px;
+            margin-bottom: 5px;
         }
+
         h4 {
             font-family: Arial, Helvetica, sans-serif;
             color: rgb(20, 202, 202);
         }
+
         p {
             font-family: Verdana;
         }
+
         b {
             font-size: 50px;
             color: red;
         }
     </style>
+
+    <script>
+        console.log("saya")
+    </script>
+
 </head>
 <br>
 <b>Selamat Belajar HTML</b>
