--- a/test.html
+++ b/test.html
@@ -36,7 +36,8 @@
     </style>
 
     <script>
-        console.log("saya")
+        var nama = prompt("siapa nama kamu?", " ");
+        document.write("<p>Hello " + nama + "</p>")
     </script>
 
 </head>
