--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 
         b {
             font-size: 50px;
-            color: red;
+            color: rgba(172, 15, 156, 0.308);
         }
     </style>
 
