--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 <body>
     <div class="mytitle">
-        <h1>Selamat Datang di Sistem Informasi Buku</h1>
+        <h1>Selamat Datang di Website NovelKu</h1>
         <a href="koleksi.html" class="btn">
             Cari Buku <i class="fas fa-search" style="margin-left: 5px;"></i>
         </a>
